--- a/enabled-sites/redirects.conf
+++ b/enabled-sites/redirects.conf
@@ -7,64 +7,7 @@ server { # Redirect all requests to domain zone apex to $cdcidomain.alamy.*
 	# Allow by default, block access from blacklisted IPs
 	include /etc/nginx/conf.d/includes/ipsets/blacklist; # Deny access from blacklisted IPs
 
-	return 301 https://www.$host$request_uri;
-
-}
-
-server { # Redirect old de site to new
-
-	listen 80;
-	listen 443 ssl http2;
-	server_name $cdcidomainde.alamy.com;
-
-	# Allow by default, block access from blacklisted IPs
-	include /etc/nginx/conf.d/includes/ipsets/blacklist; # Deny access from blacklisted IPs
-
-	location ~* ^/stock-photo-(.*)[.]html { # Pass /stock-photo-*.html requests through so backend web servers can provide redirect in one request
-		proxy_pass http://web_servers;
-	}
-
-	location ~* ^/category/(.*) { # Redirect requests for /category to web config at Nginx level so there aren't multiple redirects
-		return 301 https://$cdcidomain.alamy.de/category/$1$is_args$args;
-	}
-
-	location ~* ^/stock-photo/(.*) { # Redirect requests for /stock-photo to equivalent /fotos-bilder at Nginx level so there aren't multiple redirects
-		return 301 https://$cdcidomain.alamy.de/fotos-bilder/$1$is_args$args;
-	}
-
-	location / { # Redirect all other requests to stagingweb.alamy.de
-		return 301 https://$cdcidomain.alamy.de$request_uri;
-	}
-
-}
-
-server { # Redirect http requests to secure to https
-
-	listen 80;
-	server_name $cdcidomainsecure.alamy.com;
-
-	# Allow by default, block access from blacklisted IPs
-	include /etc/nginx/conf.d/includes/ipsets/blacklist; # Deny access from blacklisted IPs
-
-	return 301 https://$cdcidomainsecure.alamy.com$request_uri;
-
-}
-
-server { # Used for forum login API calls
-
-	listen 443 ssl http2;
-	server_name $cdcidomainsecure.alamy.com;
-
-	# Allow by default, block access from blacklisted IPs
-	include /etc/nginx/conf.d/includes/ipsets/blacklist; # Deny access from blacklisted IPs
-
-	location ~* ^/(logonheader[.]asp|forgotten-pwdheader[.]asp) { # secure.alamy.* page rules
-		proxy_pass http://web_servers;
-	}
-
-	location / {
-		return 301 https://$cdcidomain.alamy.com$request_uri;
-	}
+	return 301 https://$cdcidomain.$host$request_uri;
 
 }
 
